# rk-misc-tools

./: CMakeLists.txt  LICENSE  README.md  bootinfo.c  bootinfo.h  librkbootinfo.pc.in  rk-bootinfo.c  rk-otp-tool.c  rk-update-bootloader.c  rkvendor-tool.c  util.c
config-files/: rk-bootinfo.conf.in
